# job-scout

./: .env.example  .gitignore  README.md  config.yaml  profile.md  pyproject.toml
docs/superpowers/plans/: 2026-07-09-job-scout.md
docs/superpowers/specs/: 2026-07-09-job-scout-design.md
scripts/: probe_jumpit.py  probe_rocketpunch.py  probe_wanted.py  register_launchd.sh  register_task.ps1  run_daily_macos.sh  setup_notion.py
src/: agent.py  dashboard.py  enrich.py  history.py  mailer.py  main.py  models.py  notion_sync.py  store.py
src/collectors/: jumpit.py  saramin.py  wanted.py  work24.py
tests/: test_agent.py  test_dashboard.py  test_enrich.py  test_history.py  test_jumpit.py  test_mailer.py  test_notion_sync.py  test_saramin.py  test_store.py  test_wanted.py  test_work24.py
tests/fixtures/: jumpit_list.json  rocketpunch_list.html  saramin_list.json  wanted_list.json  work24_list.html
